Fix button alignment on voices card footer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -488,7 +488,7 @@ body {
     }
   }
 
-  .radio-icon-label {
+  .radio-icon-label, .flex-vertical-center {
     display: flex;
     align-items: center;
   }
